@@ -140,6 +140,16 @@ JDBC</a></td>
 <td style="background-color: rgb(242, 242, 242);"><a href="http://jdbc.postgresql.org/download.html">PostgreSQL</a></td>
 </tr>
 <tr>
+<td>SQLite</td>
+<td>sqlite-jdbc-3.6.20.1.jar</td>
+<td><a href="http://www.xerial.org/trac/Xerial/wiki/SQLiteJDBC">Xerial</a></td>
+</tr>
+<tr>
+<td style="background-color: rgb(242, 242, 242);">SQLite</td>
+<td style="background-color: rgb(242, 242, 242);">sqlitejdbc-v056.jar</td>
+<td style="background-color: rgb(242, 242, 242);"><a href="http://www.zentus.com/sqlitejdbc/">Zentus</a></td>
+</tr>
+<tr>
 <td>Sybase</td>
 <td>jconn3.jar</td>
 <td><a href="http://www.sybase.com/products/allproductsa-z/softwaredeveloperkit/jconnect">Sybase</a></td>
